--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ghost theme",
+  "name": "Ghost-theme",
   "version": "0.0.0",
   "description": "",
   "main": "",
@@ -10,8 +10,8 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-sass": "~0.7.2"
   }
 }
